--- a/report/CUCitations.bib
+++ b/report/CUCitations.bib
@@ -24,17 +24,6 @@
   year     = {2023}
 }
 
-@article{Zhang2018,
-  abstract = {Motivated by new technologies, such as Internet of Things, Big Data, Cloud Computing, data-driven based smart maritime related research is attracting more and more attention. With the establishment of China Automatic Identification System (AIS) Asia-Pacific Data Center and its network with IALA-Net, worldwide ship trajectory data is becoming increasingly available, thus providing plenty of materials for data-driven based smart maritime researches. This paper presents a novel approach to automatic maritime routing algorithm, given a set of ship trajectories, infer a routable road network by combining data-driven based algorithms, specially by focusing on: (i) After appropriate pre-processing, simplify AIS trajectory data using Douglas-Peucker algorithm, which can simplify AIS trajectory data by extracting characteristic points, in the meanwhile, compressing redundant information and improving subsequent processing efficiency. (ii) By setting similarity metric of characteristic points, cluster them using DBSCAN algorithm, consequently, deduce general behavior and spatial pattern of trajectories following the similar route. Also, the turning nodes of routes can be obtained in this step. Unlike past published works that focus on partitioned trajectory and require dense-sampling, trajectory point based method proposed in this paper has the merits of robustness to noise and disparity, low computational complexity and space complexity. (iii) Determine the connectivity of turning nodes according to ship trajectories. In this step, isolated turning nodes are linked together to form a coherent chain modeled as a directed graph. (iv) Given a starting location, infer the optimal route to the destination using Ant Colony Algorithm. By comparing the main route generated automatically and the macroscopic traffic flow situation, the result indicate that the method proposed in this paper is effective.},
-  author   = {Shu kai Zhang and Guo you Shi and Zheng jiang Liu and Zhi wei Zhao and Zhao lin Wu},
-  doi      = {10.1016/j.oceaneng.2018.02.060},
-  issn     = {00298018},
-  journal  = {Ocean Engineering},
-  title    = {Data-driven based automatic maritime routing from massive AIS trajectories in the face of disparity},
-  volume   = {155},
-  year     = {2018}
-}
-
 @article{AARCNN,
   abstract = {Drogue detection is a fundamental issue during the close docking phase of autonomous aerial refueling (AAR). To cope with this issue, a novel and effective method based on deep learning with convolutional neural networks (CNNs) is proposed. In order to ensure its robustness and wide application, a deep learning dataset of images was prepared by utilizing real data of “Probe and Drogue” aerial refueling, which contains diverse drogues in various environmental conditions without artificial features placed on the drogues. By employing deep learning ideas and graphics processing units (GPUs), a model for drogue detection using a Caffe deep learning framework with CNNs was designed to ensure the method's accuracy and real-time performance. Experiments were conducted to demonstrate the effectiveness of the proposed method, and results based on real AAR data compare its performance to other methods, validating the accuracy, speed, and robustness of its drogue detection ability.},
   author   = {Xufeng Wang and Xinmin Dong and Xingwei Kong and Jianmin Li and Bo Zhang},
@@ -45,17 +34,6 @@
   title    = {Drogue detection for autonomous aerial refueling based on convolutional neural networks},
   volume   = {30},
   year     = {2017}
-}
-
-@article{Jiang,
-  author  = {Jiang, Baichen and Guan, Jian and Zhou, Wei and Chen, Xiaolong},
-  doi     = {10.16798/j.issn.1003-0530.2019.05.002},
-  journal = {Journal of Signal Processing},
-  month   = {08},
-  pages   = {741-746},
-  title   = {Vessel Trajectory Prediction Algorithm Based on Polynomial Fitting Kalman Filtering},
-  volume  = {5},
-  year    = {2019}
 }
 
 @inproceedings{AAREKF,
@@ -78,6 +56,7 @@
   volume   = {2021-October},
   year     = {2021}
 }
+
 @inproceedings{Alahi2016,
   abstract = {Pedestrians follow different trajectories to avoid obstacles and accommodate fellow pedestrians. Any autonomous vehicle navigating such a scene should be able to foresee the future positions of pedestrians and accordingly adjust its path to avoid collisions. This problem of trajectory prediction can be viewed as a sequence generation task, where we are interested in predicting the future trajectory of people based on their past positions. Following the recent success of Recurrent Neural Network (RNN) models for sequence prediction tasks, we propose an LSTM model which can learn general human movement and predict their future trajectories. This is in contrast to traditional approaches which use hand-crafted functions such as Social forces. We demonstrate the performance of our method on several public datasets. Our model outperforms state-of-the-art methods on some of these datasets. We also analyze the trajectories predicted by our model to demonstrate the motion behaviour learned by our model.},
   author   = {Alexandre Alahi and Kratarth Goel and Vignesh Ramanathan and Alexandre Robicquet and Li Fei-Fei and Silvio Savarese},
@@ -88,6 +67,7 @@
   volume   = {2016-December},
   year     = {2016}
 }
+
 @inproceedings{Alemany2019,
   abstract = {Hurricanes are cyclones circulating about a defined center whose closed wind speeds exceed 75 mph originating over tropical and subtropical waters. At landfall, hurricanes can result in severe disasters. The accuracy of predicting their trajectory paths is critical to reduce economic loss and save human lives. Given the complexity and nonlinearity of weather data, a recurrent neural network (RNN) could be beneficial in modeling hurricane behavior. We propose the application of a fully connected RNN to predict the trajectory of hurricanes. We employed the RNN over a fine grid to reduce typical truncation errors. We utilized their latitude, longitude, wind speed, and pressure publicly provided by the National Hurricane Center (NHC) to predict the trajectory of a hurricane at 6-hour intervals. Results show that this proposed technique is competitive to methods currently employed by the NHC and can predict up to approximately 120 hours of hurricane path.},
   author   = {Sheila Alemany and Jonathan Beltran and Adrian Perez and Sam Ganzfried},
@@ -185,7 +165,6 @@
   volume   = {82},
   year     = {2023}
 }
-
 @article{ExpertSystemsAGR,
   abstract = {This work aims to establish a general and optimized procedure for the initial refuelling of commercial airplanes, as this loading process is strongly related to safety and energy saving issues. The on-ground refuelling is addressed as an optimization problem whose cost function involves expert knowledge about constraints and factors that influence the aircraft stability and performance. Several heterogeneous criteria (fuelling time, structural load, flow transfers, etc.) have been considered and weighted accordance to its importance in terms of stability. This allows us to adapt the strategy to any type and planned trip of the airplane. The priority is the positioning of the centre of mass of the civil aircraft within safety and manoeuvrability margins, and near the optimal position. Evolutive algorithms are applied, keeping feasible solutions by modifying genetic operators. As a case of study, the initial refuelling of a long range type commercial aircraft, the Airbus A330-200, is analysed. Simulation results have proved this methodology to be efficient and optimal. Even more, this heuristic and general approach improves the traditional solution that follows a set of pre-defined rules that are specific for each type of aircraft.},
   author   = {Elías Plaza and Matilde Santos},
@@ -205,6 +184,7 @@
   title    = {DeepMove: Predicting human mobility with attentional recurrent networks},
   year     = {2018}
 }
+
 @article{FFPSpaceSystemVehicles,
   abstract = {This paper deals with the prediction of the future location of vehicles, which is attracting attention in the era of the fourth industrial revolution and is required in various fields, such as autonomous vehicles and smart city traffic management systems. Currently, vehicle traffic prediction models and accident prediction models are being tested in various places, and considerable progress is being made. However, there are always errors in positioning when using wireless sensors due to various variables, such as the appearance of various substances (water, metal) that occur in the space where radio waves exist. There have been various attempts to reduce the positioning error in such an Internet of Things environment, but there is no definitive method with confirmed performance. Of course, location prediction is also not accurate. In particular, since a vehicle moves rapidly in space, it is increasingly affected by changes in the environment. Firstly, it was necessary to develop a spatial positioning algorithm that can improve the positioning accuracy. Secondly, for the data generated by the positioning algorithm, a machine learning method suitable for position prediction was developed. Based on the above two developed algorithms, through experiments, we found a means to reduce the error of positioning through radio waves and to increase the accuracy of positioning. We started with the idea of changing the positioning space itself from a three-dimensional space into a twodimensional one. With changes in the time and space of radio wave measurement, the location was measured by transforming the spatial dimension to cope with environmental changes. This is a technology that predicts a location through machine learning on time series data using a direction angle classification technique. An experiment was conducted to verify the performance of the proposed technology. As a result, the accuracy of positioning was improved, and the accuracy of location prediction increased in proportion to the learning time. It was possible to confirm the prediction accuracy increase of up to 80% with changes. Considering that the accuracy result for location prediction presented by other researchers is 70%, through this study, the result was improved by 10% compared to the existing vehicle location prediction accuracy. In conclusion, this paper presents a positioning algorithm and machine learning methodology for vehicle positioning. By proving its usefulness through experiments, this study provides other researchers with a new definition of space for predicting the location of a vehicle, and a machine learning method using direction angles.},
   author   = {Won Chan Lee and You Boo Jeon and Seong Soo Han and Chang Sung Jeong},
@@ -289,6 +269,16 @@
   title    = {Assessment of Spatio-Temporal Empirical Forecasting Performance of Future Shoreline Positions},
   volume   = {14},
   year     = {2022}
+}
+@article{Jiang,
+  author  = {Jiang, Baichen and Guan, Jian and Zhou, Wei and Chen, Xiaolong},
+  doi     = {10.16798/j.issn.1003-0530.2019.05.002},
+  journal = {Journal of Signal Processing},
+  month   = {08},
+  pages   = {741-746},
+  title   = {Vessel Trajectory Prediction Algorithm Based on Polynomial Fitting Kalman Filtering},
+  volume  = {5},
+  year    = {2019}
 }
 @article{Jiao2019,
   abstract = {Object detection is one of the most important and challenging branches of computer vision, which has been widely applied in people's life, such as monitoring security, autonomous driving and so on, with the purpose of locating instances of semantic objects of a certain class. With the rapid development of deep learning algorithms for detection tasks, the performance of object detectors has been greatly improved. In order to understand the main development status of object detection pipeline thoroughly and deeply, in this survey, we analyze the methods of existing typical detection models and describe the benchmark datasets at first. Afterwards and primarily, we provide a comprehensive overview of a variety of object detection methods in a systematic manner, covering the one-stage and two-stage detectors. Moreover, we list the traditional and new applications. Some representative branches of object detection are analyzed as well. Finally, we discuss the architecture of exploiting these object detection methods to build an effective and efficient system and point out a set of development trends to better follow the state-of-the-art algorithms and further research.},
@@ -401,6 +391,17 @@
   volume   = {72},
   year     = {2023}
 }
+@article{OverviewCorrelationAlgoOT,
+  abstract = {An important area of computer vision is real-time object tracking, which is now widely used in intelligent transportation and smart industry technologies. Although the correlation filter object tracking methods have a good real-time tracking effect, it still faces many challenges such as scale variation, occlusion, and boundary effects. Many scholars have continuously improved existing methods for better efficiency and tracking performance in some aspects. To provide a comprehensive understanding of the background, key technologies and algorithms of single object tracking, this article focuses on the correlation filter-based object tracking algorithms. Specifically, the background and current advancement of the object tracking methodologies, as well as the presentation of the main datasets are introduced. All kinds of methods are summarized to present tracking results in various vision problems, and a visual tracking method based on reliability is observed.},
+  author   = {Shuai Liu and Dongye Liu and Gautam Srivastava and Dawid Połap and Marcin Woźniak},
+  doi      = {10.1007/s40747-020-00161-4},
+  issn     = {21986053},
+  issue    = {4},
+  journal  = {Complex and Intelligent Systems},
+  title    = {Overview and methods of correlation filter algorithms in object tracking},
+  volume   = {7},
+  year     = {2021}
+}
 @article{Parks1983,
   abstract = {Transient pressures and flows in an aircraft aerial refueling system are presented for a sudden disconnect between a tanker aircraft and a receiver aircraft. Transient conditions are simulated in the tanker refueling system during and after the sudden closure of the poppet valve at the refueling nozzle of the tanker aircraft. The simulations are obtained using a transient flow analysis computer program originally developed for hydraulic systems. Transient pressure simulations are compared with pressure transients obtained experimentally during ground tests. Agreement between the simulations and experiment is obtained. Surge arrestors are shown to limit the surge pressure. © 1983 American Institute of Aeronautics and Astronautics, Inc., All rights reserved.},
   author   = {S. E. Parks and Robert C. Donath},
@@ -488,17 +489,6 @@
   title    = {Predicting Future Locations with Semantic Trajectories},
   volume   = {13},
   year     = {2022}
-}
-@article{SmallObjectDetectionPositonPrediction,
-  abstract = {Accurate object detection is important in computer vision. However, detecting small objects in low-resolution images remains a challenging and elusive problem, primarily because these objects are constructed of less visual information and cannot be easily distinguished from similar background regions. To resolve this problem, we propose a Hierarchical Small Object Detection Network in low-resolution remote sensing images, named HSOD-Net. We develop a point-to-region detection paradigm by first performing a key-point prediction to obtain position hypotheses, then only later super-resolving the image and detecting the objects around those candidate positions. By postponing the object prediction to after increasing its resolution, the obtained key-points are more stable than their traditional counterparts based on early object detection with less visual information. This hierarchical approach, HSOD-Net, saves significant run-time, which makes it more suitable for practical applications such as search and rescue, and drone navigation. In comparison with the state-of-art models, HSOD-Net achieves remarkable precision in detecting small objects in low-resolution remote sensing images.},
-  author   = {Jingqian Wu and Shibiao Xu},
-  doi      = {10.3390/rs13132620},
-  issn     = {20724292},
-  issue    = {13},
-  journal  = {Remote Sensing},
-  title    = {From point to region: Accurate and efficient hierarchical small object detection in low-resolution remote sensing images},
-  volume   = {13},
-  year     = {2021}
 }
 @article{SmallObjectDetectionPositonPrediction,
   abstract = {Accurate object detection is important in computer vision. However, detecting small objects in low-resolution images remains a challenging and elusive problem, primarily because these objects are constructed of less visual information and cannot be easily distinguished from similar background regions. To resolve this problem, we propose a Hierarchical Small Object Detection Network in low-resolution remote sensing images, named HSOD-Net. We develop a point-to-region detection paradigm by first performing a key-point prediction to obtain position hypotheses, then only later super-resolving the image and detecting the objects around those candidate positions. By postponing the object prediction to after increasing its resolution, the obtained key-points are more stable than their traditional counterparts based on early object detection with less visual information. This hierarchical approach, HSOD-Net, saves significant run-time, which makes it more suitable for practical applications such as search and rescue, and drone navigation. In comparison with the state-of-art models, HSOD-Net achieves remarkable precision in detecting small objects in low-resolution remote sensing images.},
@@ -660,6 +650,17 @@
   year     = {2021}
 }
 
+@article{Zhang2018,
+  abstract = {Motivated by new technologies, such as Internet of Things, Big Data, Cloud Computing, data-driven based smart maritime related research is attracting more and more attention. With the establishment of China Automatic Identification System (AIS) Asia-Pacific Data Center and its network with IALA-Net, worldwide ship trajectory data is becoming increasingly available, thus providing plenty of materials for data-driven based smart maritime researches. This paper presents a novel approach to automatic maritime routing algorithm, given a set of ship trajectories, infer a routable road network by combining data-driven based algorithms, specially by focusing on: (i) After appropriate pre-processing, simplify AIS trajectory data using Douglas-Peucker algorithm, which can simplify AIS trajectory data by extracting characteristic points, in the meanwhile, compressing redundant information and improving subsequent processing efficiency. (ii) By setting similarity metric of characteristic points, cluster them using DBSCAN algorithm, consequently, deduce general behavior and spatial pattern of trajectories following the similar route. Also, the turning nodes of routes can be obtained in this step. Unlike past published works that focus on partitioned trajectory and require dense-sampling, trajectory point based method proposed in this paper has the merits of robustness to noise and disparity, low computational complexity and space complexity. (iii) Determine the connectivity of turning nodes according to ship trajectories. In this step, isolated turning nodes are linked together to form a coherent chain modeled as a directed graph. (iv) Given a starting location, infer the optimal route to the destination using Ant Colony Algorithm. By comparing the main route generated automatically and the macroscopic traffic flow situation, the result indicate that the method proposed in this paper is effective.},
+  author   = {Shu kai Zhang and Guo you Shi and Zheng jiang Liu and Zhi wei Zhao and Zhao lin Wu},
+  doi      = {10.1016/j.oceaneng.2018.02.060},
+  issn     = {00298018},
+  journal  = {Ocean Engineering},
+  title    = {Data-driven based automatic maritime routing from massive AIS trajectories in the face of disparity},
+  volume   = {155},
+  year     = {2018}
+}
+
 @misc{Zhao2019,
   abstract = {Due to object detection's close relationship with video analysis and image understanding, it has attracted much research attention in recent years. Traditional object detection methods are built on handcrafted features and shallow trainable architectures. Their performance easily stagnates by constructing complex ensembles that combine multiple low-level image features with high-level context from object detectors and scene classifiers. With the rapid development in deep learning, more powerful tools, which are able to learn semantic, high-level, deeper features, are introduced to address the problems existing in traditional architectures. These models behave differently in network architecture, training strategy, and optimization function. In this paper, we provide a review of deep learning-based object detection frameworks. Our review begins with a brief introduction on the history of deep learning and its representative tool, namely, the convolutional neural network. Then, we focus on typical generic object detection architectures along with some modifications and useful tricks to improve detection performance further. As distinct specific detection tasks exhibit different characteristics, we also briefly survey several specific tasks, including salient object detection, face detection, and pedestrian detection. Experimental analyses are also provided to compare various methods and draw some meaningful conclusions. Finally, several promising directions and tasks are provided to serve as guidelines for future work in both object detection and relevant neural network-based learning systems.},
   author   = {Zhong Qiu Zhao and Peng Zheng and Shou Tao Xu and Xindong Wu},
@@ -670,4 +671,65 @@
   title    = {Object Detection with Deep Learning: A Review},
   volume   = {30},
   year     = {2019}
+}
+
+
+@article{SurveyTransformersSingleOT,
+  abstract = {Single-object tracking is a well-known and challenging research topic in computer vision. Over the last two decades, numerous researchers have proposed various algorithms to solve this problem and achieved promising results. Recently, Transformer-based tracking approaches have ushered in a new era in single-object tracking by introducing new perspectives and achieving superior tracking robustness. In this paper, we conduct an in-depth literature analysis of Transformer tracking approaches by categorizing them into CNN-Transformer based trackers, Two-stream Two-stage fully-Transformer based trackers, and One-stream One-stage fully-Transformer based trackers. In addition, we conduct experimental evaluations to assess their tracking robustness and computational efficiency using publicly available benchmark datasets. Furthermore, we measure their performances on different tracking scenarios to identify their strengths and weaknesses in particular situations. Our survey provides insights into the underlying principles of Transformer tracking approaches, the challenges they encounter, and the future directions they may take.},
+  author   = {Janani Kugarajeevan and Thanikasalam Kokul and Amirthalingam Ramanan and Subha Fernando},
+  doi      = {10.1109/ACCESS.2023.3298440},
+  issn     = {21693536},
+  journal  = {IEEE Access},
+  title    = {Transformers in Single Object Tracking: An Experimental Survey},
+  volume   = {11},
+  year     = {2023}
+}
+
+
+@article{SurveyVisualOT,
+  abstract  = {Visual object tracking is an important area in computer vision, and many tracking algorithms have been proposed with promising results. Existing object tracking approaches can be categorized into generative trackers, discriminative trackers, and collaborative trackers. Recently, object tracking algorithms based on deep neural networks have emerged and obtained great attention from researchers due to their outstanding tracking performance. To summarize the development of object tracking, a few surveys give analyses on either deep or non-deep trackers. In this paper, we provide a comprehensive overview of state-of-the-art tracking frameworks including both deep and non-deep trackers. We present both quantitative and qualitative tracking results of various trackers on five benchmark datasets and conduct a comparative analysis of their results. We further discuss challenging circumstances such as occlusion, illumination, deformation, and motion blur. Finally, we list the challenges and the future work in this fast-growing field.},
+  author    = {Fei Chen and Xiaodong Wang and Yunxiang Zhao and Shaohe Lv and Xin Niu},
+  doi       = {10.1016/j.cviu.2022.103508},
+  issn      = {1090235X},
+  journal   = {Computer Vision and Image Understanding},
+  keywords  = {Computer vision,Deep neural networks,Discriminative trackers,Object tracking},
+  month     = {9},
+  publisher = {Academic Press Inc.},
+  title     = {Visual object tracking: A survey},
+  volume    = {222},
+  year      = {2022}
+}
+
+@article{SuveyAdvancesSingleOTMethods,
+  abstract = {Single-object tracking is regarded as a challenging task in computer vision, especially in complex spatio-temporal contexts. The changes in the environment and object deformation make it difficult to track. In the last 10 years, the application of correlation filters and deep learning enhances the performance of trackers to a large extent. This paper summarizes single-object tracking algorithms based on correlation filters and deep learning. Firstly, we explain the definition of single-object tracking and analyze the components of general object tracking algorithms. Secondly, the single-object tracking algorithms proposed in the past decade are summarized according to different categories. Finally, this paper summarizes the achievements and problems of existing algorithms by analyzing experimental results and discusses the development trends.},
+  author   = {Yucheng Zhang and Tian Wang and Kexin Liu and Baochang Zhang and Lei Chen},
+  doi      = {10.1016/j.neucom.2021.05.011},
+  issn     = {18728286},
+  journal  = {Neurocomputing},
+  title    = {Recent advances of single-object tracking methods: A brief survey},
+  volume   = {455},
+  year     = {2021}
+}
+
+@article{VGTMOT,
+  abstract = {Multi-object tracking (MOT) is an important task of computer vision which has a wide range of applications. Existing multi-object tracking methods mostly employ the Kalman filter to predict the object location in the next frame. However, if the video is captured by a camera with significant motion variation or contains objects moving at non-constant speed, the Kalman filter may fail. In addition, although object occlusion has been studied extensively in MOT, it has not been well addressed yet. To deal with these problems, a joint detection and tracking method named visibility-guided tracking for MOT (VGT-MOT) is proposed in this paper. Specifically, to cope with the difficulty of accurate object position estimation caused by drastic camera or object motion variation, VGT-MOT utilizes an adjacent-frame object location prediction network with inter-frame attention to predict the target position in the next frame. To handle object occlusion, VGT-MOT employs the object visibility as a dynamic weight to adaptively fuse the motion and appearance similarities and update the object appearance representation. The proposed VGT-MOT has been evaluated on the MOT16, MOT17 and MOT20 datasets. The results show that VGT-MOT compares favorably against state-of-the-art MOT approaches. The source code of the proposed method is available at https://github.com/wang-ironman/VGT-MOT.},
+  author   = {Shuai Wang and Wei Xi Li and Lu Wang and Li Sheng Xu and Qing Xu Deng},
+  doi      = {10.1007/s00138-023-01398-y},
+  issn     = {14321769},
+  issue    = {4},
+  journal  = {Machine Vision and Applications},
+  title    = {VGT-MOT: visibility-guided tracking for online multiple-object tracking},
+  volume   = {34},
+  year     = {2023}
+}
+
+@inproceedings{Bhat2020,
+  abstract = {Current state-of-the-art trackers rely only on a target appearance model in order to localize the object in each frame. Such approaches are however prone to fail in case of e.g. fast appearance changes or presence of distractor objects, where a target appearance model alone is insufficient for robust tracking. Having the knowledge about the presence and locations of other objects in the surrounding scene can be highly beneficial in such cases. This scene information can be propagated through the sequence and used to, for instance, explicitly avoid distractor objects and eliminate target candidate regions. In this work, we propose a novel tracking architecture which can utilize scene information for tracking. Our tracker represents such information as dense localized state vectors, which can encode, for example, if a local region is target, background, or distractor. These state vectors are propagated through the sequence and combined with the appearance model output to localize the target. Our network is learned to effectively utilize the scene information by directly maximizing tracking performance on video segments. The proposed approach sets a new state-of-the-art on 3 tracking benchmarks, achieving an AO score of 63.6 % on the recent GOT-10k dataset.},
+  author   = {Goutam Bhat and Martin Danelljan and Luc Van Gool and Radu Timofte},
+  doi      = {10.1007/978-3-030-58592-1_13},
+  issn     = {16113349},
+  journal  = {Lecture Notes in Computer Science (including subseries Lecture Notes in Artificial Intelligence and Lecture Notes in Bioinformatics)},
+  title    = {Know Your Surroundings: Exploiting Scene Information for Object Tracking},
+  volume   = {12368 LNCS},
+  year     = {2020}
 }
